<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2010-2018 Osman Shoukry
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  ~ or implied.
  ~
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>oss-parent</artifactId>
    <groupId>org.sonatype.oss</groupId>
    <version>9</version>
  </parent>

  <groupId>com.openpojo</groupId>
  <artifactId>openpojo</artifactId>
  <version>0.9.2-SNAPSHOT</version>
  <name>${project.artifactId}</name>

  <description>This project was born out of a need to validate all POJOs (Plain Old Java Object) are behaving correctly.
    This project has two main aspects to it:
    * Make Testing as easy as possible.
    * Simplifying identity management (hashCode / equals) using annotation.
  </description>
  <url>http://openpojo.com/</url>

  <inceptionYear>2010</inceptionYear>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Osman Shoukry</name>
      <email>oshoukry at openpojo dot com</email>
      <roles>
        <role>Maintainer</role>
        <role>Developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>David J. M. Karlsen</name>
      <email>davidkarlsen at gmail</email>
      <organization>davidkarlsen.com</organization>
      <timezone>+1</timezone>
      <properties>
        <contribution>Created initial pom.xml and provided guidance in how to get OpenPojo into Maven</contribution>
      </properties>
    </contributor>
  </contributors>

  <scm>
    <connection>scm:git:https://github.com/OpenPojo/openpojo.git</connection>
    <developerConnection>scm:git:https://github.com/OpenPojo/openpojo.git</developerConnection>
    <url>https://github.com/OpenPojo/openpojo</url>
    <tag>HEAD</tag>
  </scm>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/OpenPojo/openpojo/issues</url>
  </issueManagement>

  <properties>
    <asm.version>9.8</asm.version>
    <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
    <hamcrest-all.version>3.0</hamcrest-all.version>
    <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
    <jdk.sourceEncoding>UTF-8</jdk.sourceEncoding>
    <java.version>21</java.version>
    <junit.version>6.0.0</junit.version>
    <log4j.version>2.25.2</log4j.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
    <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
    <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
    <maven-source-plugin.version>3.13.0</maven-source-plugin.version>
    <skipTests>false</skipTests>
    <slf4j.version>2.0.16</slf4j.version>
    <surefire.version>3.5.4</surefire.version>
    <testng.version>7.11.0</testng.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>${asm.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>JBOSS</id>
      <name>JBoss Repository</name>
      <url>https://repository.jboss.org/nexus/content/repositories/public/</url>
    </repository>
  </repositories>

  <build>
    <testResources>
      <testResource>
        <directory>src/test/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>${maven-release-plugin.version}</version>
        <configuration>
          <arguments>-Psonatype-oss-release,openpojo-release</arguments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <testNGArtifactName>none:none</testNGArtifactName>
          <argLine>@{argLine} -Xms1024m -Xmx1024m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eluder.coveralls</groupId>
        <artifactId>coveralls-maven-plugin</artifactId>
        <version>${coveralls-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>openpojo-release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
            <version>${maven-deploy-plugin.version}</version>
            <configuration>
              <updateReleaseInfo>true</updateReleaseInfo>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>${maven-source-plugin.version}</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>${maven-javadoc-plugin.version}</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
